--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,92 +1,188 @@
 html,
 body {
-    background: rgb(0,241,255);
-    background: radial-gradient(circle, rgba(0,241,255,1) 0%, rgba(0,212,255,1) 100%);
+  background: rgb(0, 241, 255);
+  background: radial-gradient(
+    circle,
+    rgba(0, 241, 255, 1) 0%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 
-#employee-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+#employee-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    color: white;
-    font-weight: bold;
+  color: white;
+  font-weight: bold;
 }
 
-.employee-card_header{
-    display: flex;
-    justify-content: space-between;
+.employee-card_header {
+  display: flex;
+  justify-content: space-between;
 }
 
 i {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .dialog-box {
-    width: 50%;
-    border: none;
-    border-radius: 15px;
-    background: -webkit-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
-    background: -o-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
-    background: -moz-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
-    background: linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
-    /* background-color: #0b0c10; */
-    color: white;
-  
-    font-weight: bold;
-  
-    text-align: center;
-  
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 30;
-    display: none;
+  width: 50%;
+  border: none;
+  border-radius: 15px;
+  background: -webkit-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
+  background: -o-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
+  background: -moz-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
+  background: linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
+  /* background-color: #0b0c10; */
+  color: white;
 
-    max-height: calc(100vh - 210px);
-    overflow-y: auto;
-  }
+  font-weight: bold;
 
-  .dialog-box::-webkit-scrollbar {
-    border-radius: 15px;
+  text-align: center;
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30;
+  display: none;
+
+  max-height: calc(100vh - 210px);
+  overflow-y: auto;
 }
-  
-  .close-icon {
-    text-align: end;
-  }
-  
-  .x-icon {
-    font-weight: bold;
-    cursor: pointer;
-  }
-  
-  .overlay {
-    background-color: rgba(0, 0, 0, 0.7);
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 20;
-    display: none;
-    bottom: 0;
-    right: 0;
-  }
-  
-.new-employee-header{
+
+.dialog-box::-webkit-scrollbar {
+  border-radius: 15px;
+}
+
+.close-icon {
+  text-align: end;
+}
+
+.x-icon {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 20;
+  display: none;
+  bottom: 0;
+  right: 0;
+}
+
+.new-employee-header {
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
 }
 
-.form-control{
-  width: 50%!important;
+.form-control {
+  width: 50% !important;
   margin: 0 auto;
 }
 
-.box-shadow{
-  -webkit-box-shadow: 5px 5px 20px 0px rgba(0,0,0,.75);
--moz-box-shadow: 5px 5px 20px 0px rgba(0,0,0,.75);
-box-shadow: 5px 5px 20px 0px rgba(0,0,0,.75);
+.box-shadow {
+  -webkit-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.75);
+}
+
+#calendar {
+  display: grid;
+
+  grid-template-columns: repeat(auto-fit, minmax(100px, 150px));
+  /* grid-template-rows: 1fr 1fr 1fr; */
+
+  justify-content: center;
+  min-height: 200px;
+
+  width: 100%;
+  padding: 1rem 0;
+
+  grid-row-gap: 2rem;
+}
+
+/* #calendar > .day div {
+  height: 100px;
+  width: 100%;
+
+  border: 1px solid black;
+} */
+
+.grid-item {
+  display: grid;
+
+  grid-template-rows: min-content 1fr;
+  height: 50%;
+  width: 100%;
+
+  border: 1px solid black;
+}
+
+.day {
+  display: grid;
+
+  grid-template: min-content repeat(2, 1fr) / repeat(6, 1fr);
+  /* grid-template-rows: repeat(auto-fit, 1fr); */
+
+  height: 125px;
+  border: 1px solid white;
+  width: 100%;
+
+  font-size: 5px;
+}
+
+.test {
+  width: 100%;
+}
+.time-slot {
+  border: 1px solid white;
+  width: 100%;
+}
+
+.time-slot-1 {
+  grid-row: 2 / 3;
+  grid-column: 1 / span 3;
+
+  border-left: none;
+  border-top: none;
+}
+
+.time-slot-2 {
+  grid-row: 2 / 3;
+  grid-column: 4 / -1;
+
+  border-right: none;
+  border-top: none;
+}
+
+.time-slot-3 {
+  grid-row: 3 / 4;
+  grid-column: 1 / 3;
+
+  border-left: none;
+  border-bottom: none;
+}
+
+.time-slot-4 {
+  grid-row: 3 / 4;
+  grid-column: 3 / 5;
+
+  border-bottom: none;
+}
+
+.time-slot-5 {
+  grid-row: 3 / 4;
+  grid-column: 5 / 7;
+
+  border-right: none;
+  border-bottom: none;
 }
