added scheduling logic

--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -5,6 +5,6 @@
   <script src="/dialog.js"></script>
   <script src="/dialogManager.js"></script>
   <script src="/EmployeeCard.js"></script>
-  <script src="/scheduler.js"></script>
+  <script src="/scheduler2.js"></script>
   <script src="/app.js"></script>
 </html>
