--- a/views/time.ejs
+++ b/views/time.ejs
@@ -16,61 +16,61 @@
   <div class="grid-container">
     <div class="day-name" style="text-align: center;">Tuesday</div>
     <div class="day">
-      <div class="time-slot time-slot-1"></div>
-      <div class="time-slot time-slot-2"></div>
-      <div class="time-slot time-slot-3"></div>
-      <div class="time-slot time-slot-4"></div>
-      <div class="time-slot time-slot-5"></div>
+      <div class="tuesday-afternoon time-slot time-slot-1"></div>
+      <div class="tuesday-afternoon time-slot time-slot-2"></div>
+      <div class="tuesday-evening time-slot time-slot-3"></div>
+      <div class="tuesday-evening time-slot time-slot-4"></div>
+      <div class="tuesday-evening time-slot time-slot-5"></div>
     </div>
   </div>
   <div class="grid-container">
     <div class="day-name" style="text-align: center;">Wednesday</div>
     <div class="day">
-      <div class="time-slot time-slot-1"></div>
-      <div class="time-slot time-slot-2"></div>
-      <div class="time-slot time-slot-3"></div>
-      <div class="time-slot time-slot-4"></div>
-      <div class="time-slot time-slot-5"></div>
+      <div class="wednesday-afternoon time-slot time-slot-1"></div>
+      <div class="wednesday-afternoon time-slot time-slot-2"></div>
+      <div class="wednesday-evening time-slot time-slot-3"></div>
+      <div class="wednesday-evening time-slot time-slot-4"></div>
+      <div class="wednesday-evening time-slot time-slot-5"></div>
     </div>
   </div>
   <div class="grid-container">
     <div class="day-name" style="text-align: center;">Thursday</div>
     <div class="day">
-      <div class="time-slot time-slot-1"></div>
-      <div class="time-slot time-slot-2"></div>
-      <div class="time-slot time-slot-3"></div>
-      <div class="time-slot time-slot-4"></div>
-      <div class="time-slot time-slot-5"></div>
+      <div class="thursday-afternoon time-slot time-slot-1"></div>
+      <div class="thursday-afternoon time-slot time-slot-2"></div>
+      <div class="thursday-evening time-slot time-slot-3"></div>
+      <div class="thursday-evening time-slot time-slot-4"></div>
+      <div class="thursday-evening time-slot time-slot-5"></div>
     </div>
   </div>
   <div class="grid-container">
     <div class="day-name" style="text-align: center;">Friday</div>
     <div class="day">
-      <div class="time-slot time-slot-1"></div>
-      <div class="time-slot time-slot-2"></div>
-      <div class="time-slot time-slot-3"></div>
-      <div class="time-slot time-slot-4"></div>
-      <div class="time-slot time-slot-5"></div>
+      <div class="friday-afternoon time-slot time-slot-1"></div>
+      <div class="friday-afternoon time-slot time-slot-2"></div>
+      <div class="friday-evening time-slot time-slot-3"></div>
+      <div class="friday-evening time-slot time-slot-4"></div>
+      <div class="friday-evening time-slot time-slot-5"></div>
     </div>
   </div>
   <div class="grid-container">
     <div class="day-name" style="text-align: center;">Saturday</div>
     <div class="day">
-      <div class="time-slot time-slot-1"></div>
-      <div class="time-slot time-slot-2"></div>
-      <div class="time-slot time-slot-3"></div>
-      <div class="time-slot time-slot-4"></div>
-      <div class="time-slot time-slot-5"></div>
+      <div class="saturday-afternoon time-slot time-slot-1"></div>
+      <div class="saturday-afternoon time-slot time-slot-2"></div>
+      <div class="saturday-evening time-slot time-slot-3"></div>
+      <div class="saturday-evening time-slot time-slot-4"></div>
+      <div class="saturday-evening time-slot time-slot-5"></div>
     </div>
   </div>
   <div class="grid-container">
     <div class="day-name" style="text-align: center;">Sunday</div>
     <div class="day">
-      <div class="time-slot time-slot-1"></div>
-      <div class="time-slot time-slot-2"></div>
-      <div class="time-slot time-slot-3"></div>
-      <div class="time-slot time-slot-4"></div>
-      <div class="time-slot time-slot-5"></div>
+      <div class="sunday-afternoon time-slot time-slot-1"></div>
+      <div class="sunday-afternoon time-slot time-slot-2"></div>
+      <div class="sunday-evening time-slot time-slot-3"></div>
+      <div class="sunday-evening time-slot time-slot-4"></div>
+      <div class="sunday-evening time-slot time-slot-5"></div>
     </div>
   </div>
 </div>
